kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fasting-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 4
      maxUnavailable: 0
  selector:
    matchLabels:
      app: fasting-frontend
  template:
    metadata:
      labels:
        app: fasting-frontend
    spec:
      containers:
      - name: fasting-frontend
        image: CONTAINER_IMAGE
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 10Mi
        ports:
        - containerPort: 3000
