kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fasting-frontend
spec:
  type: ClusterIP
  selector:
    app: fasting-frontend
  ports:
  - port: 80
    targetPort: 3000
