kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fasting
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: fasting
spec:
  tls:
  - hosts:
    - fasting.joaorodriguesjr.com
    secretName: fasting-tls
  rules:
  - host: fasting.joaorodriguesjr.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fasting-frontend
            port:
              number: 80
